--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,4 +2,8 @@
 <p>Welcome to {{title}}</p>
 
 <a href="/celebrities/create">Add new celebs!</a>
-<a href="/celebrities">View the list!</a>
+<a href="/celebrities">View the celeb list!</a>
+<br>
+<br>
+<a href="/movies/create">Add new movies!</a>
+<a href="/movies">View the movie list!</a>
