Iteración 8 en curso
Iteración 8 en curso

--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -2,9 +2,11 @@
 <section>
 {{#each response}}
 <p>{{title}}</p>
-{{!-- <p>{{propellers}}</p>
-<p>{{maxSpeed}}</p> --}}
-{{!-- <a href="/drones/{{_id}}/edit">Edit</a> --}}
+<a href="/movies/{{_id}}">Edit</a>
+<br>
+<br>
 {{/each}}
 </section>
+<br>
+<br>
 <a href="/">Back to home!</a>
