--- a/views/movies/new-movie.hbs
+++ b/views/movies/new-movie.hbs
@@ -16,7 +16,7 @@
 <label> Cast:
   <select name="cast" id="cast" multiple>
     {{#each response}}
-  <option value="{{name}}">{{this.name}}</option>
+  <option value="{{id}}">{{this.name}}</option>
     {{/each}}
 </select>
   
